# Parcello

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  _typos.toml  compose-deploy.yml  compose-example.yml  deny.toml  index.html  perf-history.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  flutter.yml  release.yml  web-perf.yml
DESIGN/: ACCESSIBILITY.md  ART_DIRECTION.md  AUDIO_DIRECTION.md  COLOR_SYSTEM.md  COMMERCIAL_UX_AUDIT.md  COMPONENT_INVENTORY.md  CONCEPT_CRITIQUE.md  DESIGN_DECISION_RECORDS.md  DESIGN_FEEDBACK.md  DESIGN_PHILOSOPHY.md  DESIGN_REVIEW.md  DESIGN_SYSTEM.md  GAME_FEEL.md  ICONOGRAPHY.md  IMPLEMENTATION_ROADMAP.md  MOTION_GUIDELINES.md  PLAYER_EXPERIENCE.md  README.md  SCREEN_ARCHITECTURE.md  SELF_CRITIQUE.md  TYPOGRAPHY.md  UX_GUIDELINES.md  VISUAL_LANGUAGE.md
DESIGN/car/: 0001-seat-tile.md  0002-trade-offer-card.md  README.md
DESIGN/ddr/: 0016-design-system-in-tree-not-package.md  0017-board-stays-flat-for-now.md  0018-typography-roles-carry-default-colour.md  0019-design-system-public-api-is-a-stability-contract.md  0020-component-data-flow.md  0021-game-screen-region-layout.md  0022-isometric-board.md  0023-reverse-lean-nongoals.md
DESIGN/product/: INFORMATION_ARCHITECTURE.md  PLAYER_BEHAVIOR.md
SPECS/: EVENTS.md  INFORMATION.md  NAVIGATION.md  README.md  SERVER_STATE_MACHINE.md
SPECS/game/: .gitkeep  GAME_SCREEN.md  LOBBY_SCREEN.md  SETTINGS.md
clients/flutter/: .gitignore  README.md  l10n.yaml  lighthouserc.json  perf-budgets.json  pubspec.yaml
clients/flutter/lib/: auth_manager.dart  back_on_escape.dart  board.dart  director.dart  lan_discovery.dart  lan_discovery_io.dart  lan_discovery_stub.dart  main.dart  motion.dart  oidc.dart  oidc_common.dart  oidc_login_io.dart  oidc_login_web.dart  overlay.dart  protocol.dart  reveal.dart  server_manager.dart  server_manager_io.dart  server_manager_stub.dart  session.dart  session_storage.dart  session_storage_io.dart  session_storage_web.dart  sfx.dart  stage.dart  tokens.dart  typography.dart  version.dart
clients/flutter/linux/: CMakeLists.txt
clients/flutter/test/: bid_input_test.dart  design_c2_guard_test.dart  design_components_test.dart  director_test.dart  layout_test.dart  market_strip_test.dart  movement_preview_test.dart  nav_rail_test.dart  oidc_test.dart  player_bar_test.dart  property_panel_test.dart  protocol_fixtures_test.dart  protocol_test.dart  session_reconnect_test.dart  spectate_and_hints_test.dart  stage_render_test.dart  trade_dialog_test.dart  trade_offer_card_test.dart  version_test.dart
clients/flutter/tool/: analyze_size.py  cargo_version.sh  record_perf_history.py  size_budget.sh
clients/flutter/web/: index.html  manifest.json  oidc-callback.html
clients/flutter/windows/: CMakeLists.txt
crates/cli/: Cargo.toml
crates/cli/src/: bot.rs  input.rs  main.rs  ui.rs
crates/engine/: Cargo.toml
crates/engine/src/: apply.rs  bot.rs  command.rs  content.rs  error.rs  event.rs  lib.rs  rng.rs  state.rs  strategy.rs  tuning.rs  view.rs
crates/engine/src/apply/: auction.rs  cash.rs  estate.rs  jail.rs  landing.rs  movement.rs  trade.rs  turn.rs
crates/engine/src/bot/: tests.rs
crates/engine/src/state/: market.rs
crates/engine/tests/: auction_and_trade.rs  engine.rs  estate_and_economy.rs  game_state_fuzzer.rs  jail_and_corruption.rs  protocol_fixtures.rs
crates/engine/tests/common/: mod.rs
crates/mods/: Cargo.toml
crates/mods/src/: lib.rs  loader.rs  manifest.rs  plugin.rs  raw.rs  registry.rs
crates/mods/tests/: merge.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: protocol_fixtures.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  eddsa.rs  history.rs  lan.rs  lib.rs  main.rs  ranked.rs  room.rs  showcase.rs  ws.rs
crates/server/src/ranked/: ladder.rs  queue.rs  store.rs
crates/server/src/ranked/ladder/: tests.rs
crates/server/src/room/: autoplay.rs  clock.rs  tests.rs
crates/server/tests/: ws.rs
crates/server/web/: index.html
docs/: AI_ENGINEERING.md  INVARIANTS.md  LEGACY.md  animation-sync.md  architecture.typ  business-tour-direction.md  deployment.md  domain-model.md  extension-guides.md  motion-language.md  performance.md  protocol-duplication-audit.md  roadmap-and-product.md  security-model.md  technical-debt.md  testing.md  visual-identity.md  web-performance.md
docs/LLM_CONTEXT/: README.md  architecture-summary.md  client-summary.md  engine-summary.md  gameplay-summary.md  protocol-summary.md  ranked-and-spectate-summary.md  release-and-ops-summary.md  security-summary.md  server-summary.md  testing-summary.md
docs/adr/: 0001-apply-returns-result.md  0002-rng-seed-in-state.md  0003-mvp-auth-guest-and-hs256.md  0004-server-wide-mod-set.md  0005-rusqlite-over-sqlx.md  0006-per-room-mod-sets.md  0007-private-trade-offers.md  0008-reconnect-tokens.md  0009-identity-service-design.md  0010-time-boxed-games.md  0011-expropriation.md  0012-rent-boosts.md  0013-domination-win.md  0014-server-side-bots.md  0015-per-room-settings.md  0016-lan-discovery.md  0017-velocity-deck.md  0018-blind-auctions.md  0019-shared-building-pools.md  0020-victory-points.md  0021-market-forecast.md  0022-landing-takeover.md  0023-blitz-clock.md  0024-jail-reinsertion.md  0025-flutter-web-client.md  0026-property-spotlight.md  0027-card-choice.md  0028-animation-ack-watermark.md  0029-networth-tax-tile.md  0030-animation-budget-and-motion-profiles.md  0031-bankruptcy-releases-the-estate.md  0032-runtime-client-config.md  0033-authenticated-display-name.md  0034-ranked-matchmaking-per-server-ladder.md  0035-spectators-and-bots-showcase.md  0036-gameplay-websocket-lifetime.md  0037-token-lifecycle-and-session-recovery.md
mods/base/: manifest.toml
mods/base/data/: cards.toml  (+3 more)
mods/classic/: manifest.toml
mods/highroller/: manifest.toml
protocol-fixtures/: README.md  client_message.json  command_error.json  command_kind.json  event.json  server_message.json
(+50 files in other folders)
