[package]
name = "parcello-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "parcello-cli"
path = "src/main.rs"

[dependencies]
parcello-engine = { path = "../engine" }
parcello-mods = { path = "../mods" }
parcello-protocol = { path = "../protocol" }

clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.29"
