[package]
name = "parcello-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Not crates.io-ready (path deps, no metadata); flip deliberately when publishing.
publish = false
description = "Pure, deterministic game engine for Parcello. No I/O, no async."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
