[package]
name = "parcello-mods"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Not crates.io-ready (path deps, no metadata); flip deliberately when publishing.
publish = false

[dependencies]
parcello-engine = { path = "../engine" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10, <3.15"

[lints]
workspace = true
