[package]
name = "parcello-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
parcello-engine = { path = "../engine" }
parcello-mods = { path = "../mods" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
