[package]
name = "parcello-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Not crates.io-ready (path deps, no metadata); flip deliberately when publishing.
publish = false

[dependencies]
parcello-engine = { path = "../engine" }
parcello-mods = { path = "../mods" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
