[package]
name = "parcello-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "parcello-server"
path = "src/main.rs"

[dependencies]
parcello-engine = { path = "../engine" }
parcello-mods = { path = "../mods" }
parcello-protocol = { path = "../protocol" }

axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Manual HS256 JWT verification: pure-Rust, no ring build dependency.
# Deprecated in favor of EdDSA identity tokens (ADR-0009).
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
# EdDSA identity tokens (ADR-0009): pure-Rust Ed25519 + JWKS fetch over
# rustls. 3.x of dalek is still a release candidate; stay on stable 2.
ed25519-dalek = "2"
ureq = "3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# bundled avoids a system libsqlite3 dependency.
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
# Paused-clock tests for the room task's AFK timer.
tokio = { workspace = true, features = ["test-util"] }
